--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <header class="main_title">
 
         <h1 class="logo">
-            Wydra<span class="ornament-title">Bay</span><img class="logo-icon" src="pictures/2x/Zasób 5@2x.png" alt="wydra-ikona">
+            Wydra<span class="ornament-title">Bay</span><img class="logo-icon" src="pictures/2x/Zasób 5@2x.png"
+                alt="wydra-ikona">
 
         </h1>
 
@@ -109,8 +110,10 @@
         </ul>
 
         <div class="container-large-image">
-            <img class="large-image" src="pictures/Bartek.jpeg" alt="">
-            <span class="title-large-image">Życie jest piękne</span>
+            <div class="border-large-image">
+                <img class="large-image" src="pictures/Bartek.jpeg" alt="">
+                <span class="title-large-image">Życie jest piękne</span>
+            </div>
         </div>
     </main>
 
