--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
         <main class="HolyGrail-content">
             <img class="large-image" src="pictures/Bartek.jpeg" alt="">
             <span class="title-large-image">Życie jest piękne...</span>
-            <p class="HolyGrail-content-txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam consequuntur incidunt repudiandae
-                exercitationem maiores! Blanditiis corporis suscipit deserunt assumenda aliquam unde tempora quisquam,
-                error
-                atque. Cupiditate accusantium vel cumque alias.</p>
+
         </main>
 
         <nav class="HolyGrail-nav">
@@ -115,7 +112,9 @@
                         <span class="tytuly-miniatury">Basia</span>
                     </a>
                 </li>
+                <li><button class="HollyGrail-btn"><span class="plus-btn">+</span></button></li>
             </ul>
+
         </nav>
 
 
@@ -132,7 +131,9 @@
 
         </aside>
     </div>
-    <footer></footer>
+    <footer>
+        <p>WydraBay site about wild animals &copy by Jacek Stępień 2023</p>
+    </footer>
 
     <script type="text/javascript" src="script.js"></script>
 </body>
