something must be change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         rel="stylesheet">
 
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 
 <body class="HollyGrail">
@@ -112,22 +112,22 @@
                         <span class="tytuly-miniatury">Basia</span>
                     </a>
                 </li>
-                <li><button class="HollyGrail-btn"><span class="plus-btn">+</span></button></li>
+                
             </ul>
 
         </nav>
 
 
-
-
-
         <aside class="HolyGrail-ads">
-            <p class="text-aside">
+
+            <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam consequuntur incidunt repudiandae
-                exercitationem maiores! Blanditiis corporis suscipit deserunt assumenda aliquam unde tempora quisquam,
+                exercitationem maiores! Blanditiis corporis suscipit deserunt assumenda aliquam unde tempora
+                quisquam,
                 error
                 atque. Cupiditate accusantium vel cumque alias.
             </p>
+
 
         </aside>
     </div>
