new style and coding

--- a/index.html
+++ b/index.html
@@ -29,16 +29,23 @@
 <body class="HollyGrail">
     <header class="HollyGrail-title">
 
-        <h1 class="logo">
-            Wydra<span class="ornament-title">Bay</span><img class="logo-icon" src="pictures/2x/Zasób 5@2x.png"
-                alt="wydra-ikona">
-        </h1>
-
-    </header>
+    <h1 class="logo-one-word">
+        Wydra<span class="ornament-title">Bay</span><img class="logo-icon" src="pictures/2x/Zasób 5@2x.png"
+            alt="wydra-ikona">
+    </h1>
+        </header>
     <div class="HolyGrail-body">
 
         <main class="HolyGrail-content">
-            <img class="large-image" src="pictures/Bartek.jpeg" alt="">
+            <img class="large-image-responsive"
+  alt="animal."
+  srcset="
+  ./pictures/Bartek.jpeg 600w,
+
+  
+    "
+  sizes="70vmin"
+>
             <span class="title-large-image">Życie jest piękne...</span>
 
         </main>
