--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         </main>
 
-        <nav class="HolyGrail-nav">
+        <nav>
 
             <ul class="lista-miniatur">
                 <li class="element-listy" id="wydrabartek">
