responsive step2 newest update

--- a/index.html
+++ b/index.html
@@ -1,149 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wydrowisko</title>
-    <link rel="icon" type="image/x-icon" href="/pictures/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="/pictures/favicon.ico" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 
+    <link rel="stylesheet" href="style2.css" />
+  </head>
 
-    <link rel="stylesheet" href="style2.css">
-</head>
-
-<body class="HollyGrail">
+  <body class="HollyGrail">
     <header class="HollyGrail-title">
+      <h1 class="logo-one-word">
+        Wydra<span class="ornament-title">Bay</span
+        ><img
+          class="logo-icon"
+          src="pictures/2x/Zasób 5@2x.png"
+          alt="wydra-ikona"
+        />
+      </h1>
+    </header>
 
-    <h1 class="logo-one-word">
-        Wydra<span class="ornament-title">Bay</span><img class="logo-icon" src="pictures/2x/Zasób 5@2x.png"
-            alt="wydra-ikona">
-    </h1>
-        </header>
-        
     <div class="HolyGrail-body">
+      <main class="HolyGrail-content">
+        <img
+          class="large-image-responsive"
+          alt="animal."
+          srcset="./pictures/Bartek.jpeg 600w"
+          sizes="70vmin"
+        />
+        <span class="title-large-image">Życie jest piękne...</span>
+      </main>
 
-        <main class="HolyGrail-content">
-            <img class="large-image-responsive"
-  alt="animal."
-  srcset="
-  ./pictures/Bartek.jpeg 600w,
+      <nav>
+        <ul class="lista-miniatur">
+          <li class="element-listy" id="wydrabartek">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Bartek.jpeg"
+                alt="Bartek"
+              />
+              <span class="tytuly-miniatury">Bartek</span>
+            </a>
+          </li>
+          <li class="element-listy">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Robin.jpeg"
+                alt="Robin"
+              />
+              <span class="tytuly-miniatury">Robin</span>
+            </a>
+          </li>
+          <li class="element-listy">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Moryc.jpeg"
+                alt="Moryc"
+              />
+              <span class="tytuly-miniatury">Moryc</span>
+            </a>
+          </li>
+          <li class="element-listy">
+            <a href="#">
+              <img class="obraz-miniatury" src="pictures/Lisa.jpg" alt="Lisa" />
+              <span class="tytuly-miniatury">Lisa</span>
+            </a>
+          </li>
 
-  
-    "
-  sizes="70vmin"
->
-            <span class="title-large-image">Życie jest piękne...</span>
+          <li class="element-listy">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Basia.jpeg"
+                alt="Basia"
+              />
+              <span class="tytuly-miniatury">Basia</span>
+            </a>
+          </li>
 
-        </main>
+          <li class="element-listy" id="wydrabartek">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Bartek.jpeg"
+                alt="Bartek"
+              />
+              <span class="tytuly-miniatury">Bartek</span>
+            </a>
+          </li>
 
-        <nav>
+          <li class="element-listy">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Robin.jpeg"
+                alt="Robin"
+              />
+              <span class="tytuly-miniatury">Robin</span>
+            </a>
+          </li>
 
-            <ul class="lista-miniatur">
-                <li class="element-listy" id="wydrabartek">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Bartek.jpeg" alt="Bartek">
-                        <span class="tytuly-miniatury">Bartek</span>
-                    </a>
-                </li>
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Robin.jpeg" alt="Robin">
-                        <span class="tytuly-miniatury">Robin</span>
-                    </a>
-                </li>
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Moryc.jpeg" alt="Moryc">
-                        <span class="tytuly-miniatury">Moryc</span>
-                    </a>
-                </li>
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Lisa.jpg" alt="Lisa">
-                        <span class="tytuly-miniatury">Lisa</span>
-                    </a>
-                </li>
+          <li class="element-listy">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Moryc.jpeg"
+                alt="Moryc"
+              />
+              <span class="tytuly-miniatury">Moryc</span>
+            </a>
+          </li>
 
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Basia.jpeg" alt="Basia">
-                        <span class="tytuly-miniatury">Basia</span>
-                    </a>
-                </li>
+          <li class="element-listy">
+            <a href="#">
+              <img class="obraz-miniatury" src="pictures/Lisa.jpg" alt="Lisa" />
+              <span class="tytuly-miniatury">Lisa</span>
+            </a>
+          </li>
 
-                <li class="element-listy" id="wydrabartek">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Bartek.jpeg" alt="Bartek">
-                        <span class="tytuly-miniatury">Bartek</span>
-                    </a>
-                </li>
+          <li class="element-listy">
+            <a href="#">
+              <img
+                class="obraz-miniatury"
+                src="pictures/Basia.jpeg"
+                alt="Basia"
+              />
+              <span class="tytuly-miniatury">Basia</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
 
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Robin.jpeg" alt="Robin">
-                        <span class="tytuly-miniatury">Robin</span>
-                    </a>
-                </li>
-
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Moryc.jpeg" alt="Moryc">
-                        <span class="tytuly-miniatury">Moryc</span>
-                    </a>
-                </li>
-
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Lisa.jpg" alt="Lisa">
-                        <span class="tytuly-miniatury">Lisa</span>
-                    </a>
-                </li>
-
-                <li class="element-listy">
-                    <a href="#">
-                        <img class="obraz-miniatury" src="pictures/Basia.jpeg" alt="Basia">
-                        <span class="tytuly-miniatury">Basia</span>
-                    </a>
-                </li>
-                
-            </ul>
-
-        </nav>
-
-
-        <aside class="HolyGrail-ads">
-
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam consequuntur incidunt repudiandae
-                exercitationem maiores! Blanditiis corporis suscipit deserunt assumenda aliquam unde tempora
-                quisquam,
-                error
-                atque. Cupiditate accusantium vel cumque alias.
-            </p>
-
-
-        </aside>
+      <aside class="HolyGrail-ads">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+          consequuntur incidunt repudiandae exercitationem maiores! Blanditiis
+          corporis suscipit deserunt assumenda aliquam unde tempora quisquam,
+          error atque. Cupiditate accusantium vel cumque alias.
+        </p>
+      </aside>
     </div>
     <footer>
-        <p>WydraBay site about wild animals &copy by Jacek Stępień 2023</p>
+      <p>WydraBay site about wild animals &copy by Jacek Stępień 2023</p>
     </footer>
 
     <script type="text/javascript" src="script.js"></script>
-</body>
-
+  </body>
 </html>
