javascript added step1

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
       <nav>
         <ul class="lista-miniatur">
           <li class="element-listy" id="wydrabartek">
-            <a href="#">
-              <img
+            <a href="pictures/Bartek.jpeg"
+            data-kind-picture="trigger"
+            data-title-picture="Życie jest piękne"
+            data-url-picture="pictures/Bartek.jpeg">
+            <img
                 class="obraz-miniatury"
                 src="pictures/Bartek.jpeg"
                 alt="Bartek"
@@ -66,7 +69,10 @@
             </a>
           </li>
           <li class="element-listy">
-            <a href="#">
+            <a href="pictures/Robin.jpeg"
+            data-kind-picture="trigger"
+            data-title-picture="Życie jest piękne2"
+            data-url-picture="pictures/Robin.jpg">
               <img
                 class="obraz-miniatury"
                 src="pictures/Robin.jpeg"
@@ -76,7 +82,10 @@
             </a>
           </li>
           <li class="element-listy">
-            <a href="#">
+            <a href="pictures/Moryc.jpeg"
+            data-kind-picture="trigger"
+            data-title-picture="Życie jest piękne3"
+            data-url-picture="pictures/Moryc.jpg">
               <img
                 class="obraz-miniatury"
                 src="pictures/Moryc.jpeg"
@@ -86,14 +95,19 @@
             </a>
           </li>
           <li class="element-listy">
-            <a href="#">
+            <a href="pictures/Lisa.jpg"
+            data-kind-picture="trigger"
+            data-title-picture="Życie jest piękne4"
+            data-url-picture="pictures/Lisa.jpg">
               <img class="obraz-miniatury" src="pictures/Lisa.jpg" alt="Lisa" />
               <span class="tytuly-miniatury">Lisa</span>
             </a>
           </li>
 
           <li class="element-listy">
-            <a href="#">
+            <a href="pictures/Basia.jpeg"data-kind-picture="trigger"
+            data-title-picture="Życie jest piękne5"
+            data-url-picture="pictures/Basia.jpg">
               <img
                 class="obraz-miniatury"
                 src="pictures/Basia.jpeg"
@@ -103,56 +117,7 @@
             </a>
           </li>
 
-          <li class="element-listy" id="wydrabartek">
-            <a href="#">
-              <img
-                class="obraz-miniatury"
-                src="pictures/Bartek.jpeg"
-                alt="Bartek"
-              />
-              <span class="tytuly-miniatury">Bartek</span>
-            </a>
-          </li>
-
-          <li class="element-listy">
-            <a href="#">
-              <img
-                class="obraz-miniatury"
-                src="pictures/Robin.jpeg"
-                alt="Robin"
-              />
-              <span class="tytuly-miniatury">Robin</span>
-            </a>
-          </li>
-
-          <li class="element-listy">
-            <a href="#">
-              <img
-                class="obraz-miniatury"
-                src="pictures/Moryc.jpeg"
-                alt="Moryc"
-              />
-              <span class="tytuly-miniatury">Moryc</span>
-            </a>
-          </li>
-
-          <li class="element-listy">
-            <a href="#">
-              <img class="obraz-miniatury" src="pictures/Lisa.jpg" alt="Lisa" />
-              <span class="tytuly-miniatury">Lisa</span>
-            </a>
-          </li>
-
-          <li class="element-listy">
-            <a href="#">
-              <img
-                class="obraz-miniatury"
-                src="pictures/Basia.jpeg"
-                alt="Basia"
-              />
-              <span class="tytuly-miniatury">Basia</span>
-            </a>
-          </li>
+          
         </ul>
       </nav>
 
