--- a/index.html
+++ b/index.html
@@ -45,75 +45,77 @@
     <div class="HolyGrail-body">
       <main class="HolyGrail-content">
         <img
-          class="large-image-responsive"
-          alt="animal."
-          srcset="./pictures/Bartek.jpeg 600w"
-          sizes="70vmin"
+          class="large-image-responsive" 
+          data-kind-picture="goal"
+          
+          src="./pictures/Bartek.jpg" alt="animal."
+      
         />
-        <span class="title-large-image">Życie jest piękne...</span>
+        <span class="title-large-image"
+         data-kind-picture="title">Życie jest piękne...</span>
       </main>
 
       <nav>
         <ul class="lista-miniatur">
           <li class="element-listy" id="wydrabartek">
-            <a href="pictures/Bartek.jpeg"
+            <a href="pictures/Bartek.jpg"
             data-kind-picture="trigger"
             data-title-picture="Życie jest piękne"
-            data-url-picture="pictures/Bartek.jpeg">
+            data-url-picture="pictures/Bartek.jpg">
             <img
                 class="obraz-miniatury"
-                src="pictures/Bartek.jpeg"
+                src="pictures/Bartek.jpg"
                 alt="Bartek"
               />
-              <span class="tytuly-miniatury">Bartek</span>
+              <span class="tytul-miniatury">Bartek</span>
             </a>
           </li>
           <li class="element-listy">
-            <a href="pictures/Robin.jpeg"
+            <a href="pictures/Robin.jpg"
             data-kind-picture="trigger"
             data-title-picture="Życie jest piękne2"
             data-url-picture="pictures/Robin.jpg">
               <img
                 class="obraz-miniatury"
-                src="pictures/Robin.jpeg"
+                src="pictures/Robin.jpg"
                 alt="Robin"
               />
-              <span class="tytuly-miniatury">Robin</span>
+              <span class="tytul-miniatury">Robin</span>
             </a>
           </li>
           <li class="element-listy">
-            <a href="pictures/Moryc.jpeg"
+            <a href="pictures/Moryc.jpg"
             data-kind-picture="trigger"
             data-title-picture="Życie jest piękne3"
             data-url-picture="pictures/Moryc.jpg">
               <img
                 class="obraz-miniatury"
-                src="pictures/Moryc.jpeg"
+                src="pictures/Moryc.jpg"
                 alt="Moryc"
               />
-              <span class="tytuly-miniatury">Moryc</span>
+              <span class="tytul-miniatury">Moryc</span>
             </a>
           </li>
           <li class="element-listy">
             <a href="pictures/Lisa.jpg"
             data-kind-picture="trigger"
-            data-title-picture="Życie jest piękne4"
+            data-title-picture="Cudowny spokój"
             data-url-picture="pictures/Lisa.jpg">
               <img class="obraz-miniatury" src="pictures/Lisa.jpg" alt="Lisa" />
-              <span class="tytuly-miniatury">Lisa</span>
+              <span class="tytul-miniatury">Lisa</span>
             </a>
           </li>
 
           <li class="element-listy">
-            <a href="pictures/Basia.jpeg"data-kind-picture="trigger"
-            data-title-picture="Życie jest piękne5"
+            <a href="./pictures/Basia.jpg" data-kind-picture="trigger"
+            data-title-picture="Nareszcie relaks"
             data-url-picture="pictures/Basia.jpg">
               <img
                 class="obraz-miniatury"
-                src="pictures/Basia.jpeg"
+                src="pictures/Basia.jpg"
                 alt="Basia"
               />
-              <span class="tytuly-miniatury">Basia</span>
+              <span class="tytul-miniatury">Basia</span>
             </a>
           </li>
 
