--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <li class="element-listy">
             <a href="pictures/Robin.jpg"
             data-kind-picture="trigger"
-            data-title-picture="Życie jest piękne2"
+            data-title-picture="Sielanka"
             data-url-picture="pictures/Robin.jpg">
               <img
                 class="obraz-miniatury"
@@ -86,10 +86,10 @@
           <li class="element-listy">
             <a href="pictures/Moryc.jpg"
             data-kind-picture="trigger"
-            data-title-picture="Życie jest piękne3"
+            data-title-picture="Kocham tą ciszę"
             data-url-picture="pictures/Moryc.jpg">
               <img
-                class="obraz-miniatury"
+                class="obraz-miniatury"z
                 src="pictures/Moryc.jpg"
                 alt="Moryc"
               />
